syntax = "proto3";

package lumen.pqc.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "lumen/pqc/v1/pqc.proto";
import "lumen/pqc/v1/params.proto";

option go_package = "lumen/x/pqc/types";

service Query {
  rpc AccountPQC(QueryAccountPQCRequest) returns (QueryAccountPQCResponse) {
    option (google.api.http).get = "/lumen/pqc/v1/accounts/{addr}";
  }
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lumen/pqc/v1/params";
  }
}

message QueryAccountPQCRequest {
  string addr = 1;
}

message QueryAccountPQCResponse {
  AccountPQC account = 1 [(gogoproto.nullable) = false];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

